[tool.poetry]
name = "testloop"
version = "0.1.0"
description = "A nimble testing tool"
authors = ["Jon Skulski <jskulski@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
publish = 'testloop:publish'

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
poetry-publish = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
